--- a/ELK/logstash/pipeline/logstash.conf
+++ b/ELK/logstash/pipeline/logstash.conf
@@ -1,14 +1,13 @@
 input {
-  tcp{
-	port => 5000
-	codec => json
-  }
+    tcp {
+        port => 5001
+        codec => json
+    }
 }
- 
+
 output {
- 
-  elasticsearch {
-    hosts => "elasticsearch:9200"
-	index => "Job Portal"
-  }
+    elasticsearch {
+        hosts => ["http://elasticsearch:9200"]
+        index => "springboot-logs"
+    }
 }
